--- a/priceCalculater.css
+++ b/priceCalculater.css
@@ -6,18 +6,25 @@
 body{
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 80px;
 }
-h2{
-    margin: 10px 0px 25px 0px;
+.courier-hide{
+    display: none;
+}
+.courier-show{
+    display: block;
+}
+
+
+
+
+.add-order{
+    margin: 50px 0px 25px 0px;
+    text-align: center;
 }
 
 .data{
     width: 100%;
+    padding: 80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -97,14 +104,30 @@ h2{
     margin: 12px 0px;
 }
 .data .left .detail .radio .radio-btn input{
-    width: 5%;
+    width: 10%;
 }
 .data .left .detail .radio .radio-btn input:nth-child(2){
     margin-left: 22px;
 }
 
+.data .left .detail .radio .radio-btn .radio-btn-data{
+    width: 100%;
+}
 .data .left .detail .radio .radio-btn p{
     width: 100%;
+}
+.data .left .detail .radio .radio-btn .radio-btn-data #para1{
+    font-size: 10px;
+    display: none;
+}
+.data .left .detail .radio .radio-btn .radio-btn-data #para2{
+    font-size: 10px;
+    display: none;
+    color: red;
+}
+
+.data .left .detail .radio .radio-btn .radio-btn-data:nth-child(2){
+    margin-left: 30px;
 }
 
 .data .left .result{
@@ -201,7 +224,8 @@ h2{
 }
 
 @media screen and (max-width: 799px) {
-    body{
+    .data{
+        width: 100%;
         padding: 80px 10px;
     }
     .data .left{
